# wolfssl-openssl1

./: .clangd  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEV_HISTORY.md  LICENSE  README.md  build.sh  fix_makefile_des.py  test.sh
patches/: Makefile.wolfshim  openssl-wolfshim.patch
shim/: ARCHITECTURE.md  PROMPT-wolfssl-upgrade.md  RELEASE-NOTES.md  UPGRADING-WOLFSSL.md  audit-gaps.sh  wolfshim.supp
shim/include/: aes_ctx.h  aes_shim.h  bn_shim.h  ec_shim.h  evp_wolf_bridge.h  hmac_shim.h  rand_shim.h  rsa_shim.h  sha_ctx.h  sha_shim.h  shim_rng.h  wolfshim_compat.h  wolfshim_preinclude.h
shim/src/: wolfshim_abi_check.c
shim/src/aes/: CMakeLists.txt  aes_shim.c
shim/src/aesni/: CMakeLists.txt  aesni_shim.c
shim/src/aliases/: CMakeLists.txt  aliases.c
shim/src/bn/: CMakeLists.txt  bn_shim.c
shim/src/chacha/: chacha_shim.c
shim/src/des/: des_modes_bridge.c  des_shim.c
shim/src/ec/: CMakeLists.txt  ec_shim.c
shim/src/evp/: CMakeLists.txt  evp_digest_shim.c  evp_wolf_bridge.c  evp_wolf_bridge.h
shim/src/hmac/: CMakeLists.txt  hmac_shim.c
shim/src/legacy_stubs/: legacy_cipher_stubs.c
shim/src/pkey/: pkey_meth_shim.c
shim/src/rand/: CMakeLists.txt  rand_shim.c
shim/src/rc4/: rc4_shim.c
shim/src/rng/: CMakeLists.txt  shim_rng.c
shim/src/rsa/: CMakeLists.txt  rsa_shim.c
shim/src/sha/: CMakeLists.txt  sha_shim.c
shim/src/stubs/: CMakeLists.txt  misc_stubs.c
shim/tests/: CMakeLists.txt  aes_lifecycle_test.c  rand_shim_test.c  sha_lifecycle_test.c  test_stubs.c
shim/wychcheck_builds/: .gitignore
test/: wychcheck_gitref_test.sh
tools/: struct_probe.c
